Fixed padding on small screens

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -446,7 +446,7 @@ hr {
 
 @media screen and (max-width: 320px) {
     .icons li {
-        padding: 0.15em 0.15em;
+        padding: 0em 0em;
     }
 }
 
